--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -19,10 +19,7 @@
 	 <input type="hidden" name="plugin_url"   id="plugin_url"   value="<!-- tmpl_var Plugin_Url -->" /> 
 	</form> 
 
-<fieldset> 
-	<legend>
-	 Tracker Summaries
-	</legend>
+<h1>Message Summaries</h1>
 	
 	<div id="show_table_results_loading"><p>&nbsp;</p></div>
 	<div id="show_table_results" style="width:100%; height:325px"></div>
@@ -31,7 +28,6 @@
 	<div id="subscriber_history_chart"style="width:100%; height:400px"></div>
 	
 
-</fieldset> 
 
 <fieldset> 
  <legend>Export Logs</legend> 
@@ -59,6 +55,21 @@
 </tr> 
 </table> 
 </fieldset> 
+
+<fieldset> 
+ <legend>Data Cache</legend> 
+
+<p>
+	Tracker data displayed is cached, to speed up page rendering. Data is cached for 1 hour, before it is removed, and the data displayed is recreated. 
+</p>
+
+ 
+  <form action="<!-- tmpl_var Plugin_URL -->" method="post">
+   <input type="hidden" name="f" value="clear_data_cache" /> 
+   <input type="submit" value="Clear Data Cache" class="alertive" />
+  </form> 
+</fieldset>
+
 
 <fieldset> 
 <legend>
