--- a/dada/templates/subscriber_field_tags_listing_widget.tmpl
+++ b/dada/templates/subscriber_field_tags_listing_widget.tmpl
@@ -1,7 +1,7 @@
 <!-- begin subscriber_field_tags_listing_widget.tmpl --> 
 
 <!-- tmpl_if can_have_subscriber_fields --> 
-
+<!-- 
     
      <fieldset>
       <legend>  
@@ -10,7 +10,10 @@
      </a> Subscriber Profile Field Tags
 
       </legend>
+
+
     <div id="subscriber_profile_field_tags" style="display:none">  
+--> 
      
 		<p>You can use the following tags for personalization of your message:</p>
 
@@ -24,9 +27,9 @@
 		</li>
        <!--/tmpl_loop --> 
       </ul>
-    </div> 
+<!--   </div> 
      </fieldset> 
-    
+ --> 
 
 <!-- /tmpl_if --> 
 
