--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -483,10 +483,10 @@ for it to work correctly. For help on setting the cronjob, see the
 
 <p><input type="checkbox" name="install_tracker" id="install_tracker" value="1" /><label for="install_tracker">Tracker</label></p> 
 
-<p><input type="checkbox" name="install_dada_bridge" id="install_dada_bridge" value="1" /><label for="install_dada_bridge">Discussion Lists</label> <span class="alert">Requires Additional Configuration (cronjob)</span>	
+<p><input type="checkbox" name="install_bridge" id="install_bridge" value="1" /><label for="install_bridge">Discussion Lists</label> <span class="alert">Requires Additional Configuration (cronjob)</span>	
 </p> 
 
-<p><input type="checkbox" name="install_dada_bounce_handler" id="install_dada_bounce_handler" value="1" /><label for="install_dada_bounce_handler">Bounce Handler</label> <span class="alert">Requires Additional Configuration (cronjob)</span></p> 
+<p><input type="checkbox" name="install_bounce_handler" id="install_bounce_handler" value="1" /><label for="install_bounce_handler">Bounce Handler</label> <span class="alert">Requires Additional Configuration (cronjob)</span></p> 
 <fieldset> 
 	<legend>Additional Bounce Handler Configuration [
 		<a href="#" class="toggleDivs" data-target="bounce_handler_configuration_help">
@@ -495,17 +495,17 @@ for it to work correctly. For help on setting the cronjob, see the
 	<div id="bounce_handler_configuration_help" style="display:none" class="clearskiesbox">
 		<p>
 			The Bounce Handler requires a new POP3 email account to be created, in order to work correctly. Make sure the email address isn't used for 
-			any other purpose, except for the bounce handler. See the <a href="<!-- tmpl_var DOC_URL -->/dada_bounce_handler.pl.html"  target="_blank">documentation for this plugin</a> for additional information. 
+			any other purpose, except for the bounce handler. See the <a href="<!-- tmpl_var DOC_URL -->/bounce_handler.cgi.html"  target="_blank">documentation for this plugin</a> for additional information. 
 			</p> 
 	</div> 
 	
-	<p><label style="width: 16em;float: left;text-align: right;margin-right: 0.5em;display: block" for="dada_bounce_handler_address">Bounce Handler Email Address:</label> <input type="text" name="dada_bounce_handler_address" id="dada_bounce_handler_address" value="" /></p>
+	<p><label style="width: 16em;float: left;text-align: right;margin-right: 0.5em;display: block" for="bounce_handler_address">Bounce Handler Email Address:</label> <input type="text" name="bounce_handler_address" id="bounce_handler_address" value="" /></p>
 
-	<p><label style="width: 16em;float: left;text-align: right;margin-right: 0.5em;display: block" for="dada_bounce_handler_server">Mail Server:</label> <input type="text" name="dada_bounce_handler_server" id="dada_bounce_handler_server" value="" /></p>
+	<p><label style="width: 16em;float: left;text-align: right;margin-right: 0.5em;display: block" for="bounce_handler_server">Mail Server:</label> <input type="text" name="bounce_handler_server" id="bounce_handler_server" value="" /></p>
 
-	<p><label style="width: 16em;float: left;text-align: right;margin-right: 0.5em;display: block" for="dada_bounce_handler_username">Username:</label> <input type="text" name="dada_bounce_handler_username" id="dada_bounce_handler_username" value="" /></p>
+	<p><label style="width: 16em;float: left;text-align: right;margin-right: 0.5em;display: block" for="bounce_handler_username">Username:</label> <input type="text" name="bounce_handler_username" id="bounce_handler_username" value="" /></p>
 
-	<p><label style="width: 16em;float: left;text-align: right;margin-right: 0.5em;display: block" for="dada_bounce_handler_password">Password:</label> <input type="text" name="dada_bounce_handler_password" id="dada_bounce_handler_password" value="" /></p>
+	<p><label style="width: 16em;float: left;text-align: right;margin-right: 0.5em;display: block" for="bounce_handler_password">Password:</label> <input type="text" name="bounce_handler_password" id="bounce_handler_password" value="" /></p>
 	 
 
 
