--- a/dada/templates/plugins/tracker/message_bounce_report_table.tmpl
+++ b/dada/templates/plugins/tracker/message_bounce_report_table.tmpl
@@ -13,7 +13,7 @@
 <!-- tmpl_loop bounce_report --> 
 	<tr <!-- tmpl_if __odd__ -->class="alt"<!-- /tmpl_if -->> 
 	  <td> 
-		<a href="./dada_bounce_handler.pl?flavor=cgi_bounce_score_search&query=<!-- tmpl_var email escape="URL" -->&chrome=0" title="Bounce Log for <!-- tmpl_var email escape="HTML" -->" onclick="Modalbox.show(this.href, {title: this.title, width: 640, height:480}); return false;">
+		<a href="./bounce_handler.cgi?flavor=cgi_bounce_score_search&query=<!-- tmpl_var email escape="URL" -->&chrome=0" title="Bounce Log for <!-- tmpl_var email escape="HTML" -->" onclick="Modalbox.show(this.href, {title: this.title, width: 640, height:480}); return false;">
 		 <!-- tmpl_var email -->
 	    </a>
 	  </td> 
