--- a/dada/templates/sending_monitor_container_screen.tmpl
+++ b/dada/templates/sending_monitor_container_screen.tmpl
@@ -2,6 +2,8 @@
 
 
 <!-- tmpl_set name="title" value="Mass Mailing &#187; Monitor Your Mailings" -->
+<!-- tmpl_set name="load_google_viz" value="1" -->
+
 
 <div id="sending_monitor_container"></div>
 
