--- a/dada/templates/plugins/shared/sql_backend_only_message.tmpl
+++ b/dada/templates/plugins/shared/sql_backend_only_message.tmpl
@@ -7,4 +7,4 @@
 </div>
 
 <h1>Sorry,</h1>
-<p>This plugin will only work, if you have installed and configured Dada Mail to use one of the SQL backends.</p>
+<p>This plugin will only work, if you have installed and configured <!-- tmpl_var PROGRAM_NAME --> to use one of the SQL backends.</p>
