--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -20,8 +20,9 @@
 <!-- tmpl_include mass_mailing_limit_notice_widget.tmpl --> 
 
 
-<form name="mass_mailing" action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post">
+<form name="mass_mailing" id="mass_mailing" action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post">
  <input type="hidden" name="s_program_url" id="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" />
+ <input type="hidden" name="support_files_url" id="support_files_url" value="<!-- tmpl_var SUPPORT_FILES_URL -->" />
  
 
 <!-- tmpl_unless can_use_mime_lite_html -->
@@ -340,11 +341,11 @@
  
 <!-- /tmpl_unless -->
 
-</form> 
 <!-- tmpl_include send_url_email_message_body_help_widget.tmpl -->		
 
  
 <!-- tmpl_include send_a_list_message_button_widget.tmpl -->
 
+</form> 
 
 <!-- end send_url_screen.tmpl -->
