Tiny spelling problem fixed.

--- a/dada/DADA/Template/templates/manage_script_screen.tmpl
+++ b/dada/DADA/Template/templates/manage_script_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin manage_script_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="pp Information &#187; About <!-- tmpl_var PROGRAM_NAME -->" --> 
+<!-- tmpl_set name="title" value="App Information &#187; About <!-- tmpl_var PROGRAM_NAME -->" --> 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
 		App Information &#187; About <!-- tmpl_var PROGRAM_NAME -->
