Change the escape from, "URI" to, "URL" as there is no URI escape.

--- a/dada/templates/manage_script_screen.tmpl
+++ b/dada/templates/manage_script_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin manage_script_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="pp Information &#187; About <!-- tmpl_var PROGRAM_NAME -->" --> 
+<!-- tmpl_set name="title" value="App Information &#187; About <!-- tmpl_var PROGRAM_NAME -->" --> 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
 		App Information &#187; About <!-- tmpl_var PROGRAM_NAME -->
@@ -118,7 +118,7 @@
  advantage of.
 </p>
 <p style="text-align:center">
- <input type="button" class="plain" id="check_version" value="Check Version" data-ver="<!-- tmpl_var VERSION escape=URI -->" />
+ <input type="button" class="plain" id="check_version" value="Check Version" data-ver="<!-- tmpl_var VERSION escape=URL -->" />
 </p>
 <hr />
 
