For whatever reason, I've decided it's best to have the Bounce Handler rules be outside of the module.

--- a/dada/templates/bouncing_search_results_widget.tmpl
+++ b/dada/templates/bouncing_search_results_widget.tmpl
@@ -3,7 +3,7 @@
 
 
 
-
+	
 <!-- tmpl_loop search_results -->
 <div <!-- tmpl_if __odd__ -->class="alt"<!-- tmpl_else -->style="background:#fff"<!-- /tmpl_if -->>
 	<div style="padding:5px">
@@ -56,12 +56,11 @@
 			<tr>
 				<td>
 					<strong>
-					<!-- tmpl_var diagnostic_label ESCAPE="HTML" -->
-						: 
+					<!-- tmpl_var diagnostic_label ESCAPE="HTML" -->: 
 					</strong>
 				</td>
 				<td>
-				<!-- tmpl_var diagnostic_value ESCAPE="HTML" -->
+				<!-- tmpl_var diagnostic_value  -->
 				</td>
 			</tr>
 <!-- /tmpl_loop -->
